argocd_files/basic-elixir-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-elixir-app-deployment
spec:
  selector:
    matchLabels:
      app: basic-elixir-app
  replicas: 2
  template:
    metadata:
      labels:
        app: basic-elixir-app
    spec:
      containers:
      - name: basic-elixir-app
        image: 172.20.50.53/basic_elixir_app
        ports:
        - containerPort: 4000
