argocd_files/basic-elixir-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-elixir-app-service
  namespace: basic-elixir-app-rancher
spec:
  ports:
  - port: 4000
#    targetPort: 4000
  selector:
    app: basic-elixir-app
