argocd_files/basic-elixir-app-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: basic-elixir-app-route
  namespace: basic-elixir-app-rancher
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`basic-elixir-app-rancher.k3s.lab.internal`)
    services:
    - name: basic-elixir-app-service
      port: 4000
      scheme: http
